<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>AddMotorcycle</class>
 <widget class="QDialog" name="AddMotorcycle">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>583</width>
    <height>423</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QGroupBox" name="formGroupBox">
   <property name="geometry">
    <rect>
     <x>9</x>
     <y>10</y>
     <width>561</width>
     <height>261</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="4" column="1">
     <widget class="QComboBox" name="Stan_wybierz">
      <property name="font">
       <font>
        <family>Avenir Next</family>
       </font>
      </property>
     </widget>
    </item>
    <item row="0" column="0">
     <widget class="QLabel" name="Model">
      <property name="font">
       <font>
        <family>Avenir Next</family>
       </font>
      </property>
      <property name="text">
       <string>Model:</string>
      </property>
     </widget>
    </item>
    <item row="3" column="1">
     <widget class="QTextEdit" name="ID_pisz">
      <property name="maximumSize">
       <size>
        <width>500</width>
        <height>30</height>
       </size>
      </property>
      <property name="font">
       <font>
        <family>Avenir Next</family>
       </font>
      </property>
     </widget>
    </item>
    <item row="3" column="0">
     <widget class="QLabel" name="ID">
      <property name="font">
       <font>
        <family>Avenir Next</family>
       </font>
      </property>
      <property name="text">
       <string>ID:</string>
      </property>
     </widget>
    </item>
    <item row="4" column="0">
     <widget class="QLabel" name="Stan">
      <property name="font">
       <font>
        <family>Avenir Next</family>
       </font>
      </property>
      <property name="text">
       <string>Stan:</string>
      </property>
     </widget>
    </item>
    <item row="0" column="1">
     <widget class="QComboBox" name="Model_wybierz">
      <property name="font">
       <font>
        <family>Avenir Next</family>
       </font>
      </property>
     </widget>
    </item>
    <item row="2" column="1">
     <widget class="QTextEdit" name="Cena_pisz">
      <property name="minimumSize">
       <size>
        <width>100</width>
        <height>0</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>500</width>
        <height>30</height>
       </size>
      </property>
      <property name="font">
       <font>
        <family>Avenir Next</family>
       </font>
      </property>
     </widget>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="Cena">
      <property name="font">
       <font>
        <family>Avenir Next</family>
       </font>
      </property>
      <property name="text">
       <string>Cena:</string>
      </property>
     </widget>
    </item>
    <item row="5" column="1">
     <widget class="QComboBox" name="Paliw_wybierz">
      <property name="font">
       <font>
        <family>Avenir Next</family>
       </font>
      </property>
     </widget>
    </item>
    <item row="5" column="0">
     <widget class="QLabel" name="Paliwo">
      <property name="font">
       <font>
        <family>Avenir Next</family>
       </font>
      </property>
      <property name="text">
       <string>Silnik:</string>
      </property>
     </widget>
    </item>
    <item row="6" column="1">
     <widget class="QComboBox" name="Typ_silnika_wybierz">
      <property name="maximumSize">
       <size>
        <width>500</width>
        <height>16777215</height>
       </size>
      </property>
      <property name="font">
       <font>
        <family>Avenir Next</family>
       </font>
      </property>
     </widget>
    </item>
    <item row="6" column="0">
     <widget class="QLabel" name="Typ_silnika">
      <property name="font">
       <font>
        <family>Avenir Next</family>
       </font>
      </property>
      <property name="text">
       <string>Typ silnika</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QGroupBox" name="horizontalGroupBox">
   <property name="geometry">
    <rect>
     <x>30</x>
     <y>330</y>
     <width>501</width>
     <height>71</height>
    </rect>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QPushButton" name="Akceptuj">
      <property name="font">
       <font>
        <family>Avenir Next</family>
       </font>
      </property>
      <property name="text">
       <string>Akceptuj</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="Anuluj">
      <property name="font">
       <font>
        <family>Avenir Next</family>
       </font>
      </property>
      <property name="text">
       <string>Anuluj</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
